# business-applications

./: CLAUDE.md  LICENSE  README.md  app.py  download_and_chart.py  pyproject.toml  requirements.txt
fred_biz_apps/: __init__.py  catalog.py  charts.py  client.py  downloader.py
